<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CookApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="begin_use">取消</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新</string>
    <string name="refreshed">刷新完毕</string>
    <string name="push_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载</string>
    <string name="loaded">加载完毕</string>
    <string name="cancle">取消</string>
    <string name="text_in">跳过>></string>

    <!--  -->
    <string name="saveweb">省流量模式</string>
    <string name="messageremind">消息提醒</string>
    <string name="sharesetting">分享设置</string>
    <string name="invitefriends">邀请好友</string>
    <string name="clearsave">清空缓存</string>
    <string name="feedback">意见反馈</string>
    <string name="diagnoseweb">网络诊断</string>
    <string name="about">关于XX</string>
    <string name="competitiveproducts">精品应用</string>
    <string name="update">检查更新</string>
    <!--  -->
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="login">登录</string>
    <string name="findbackpwsd">找回密码</string>
    <string name="third_login">使用第三方账号登录</string>
    <string name="register_im">立即注册</string>
    <string name="phone_login_im">手机号快捷登录</string>
    <!--  -->
    <string name="main_page">首页</string>
    <string name="radom_scan">随便看看</string>
    <string name="more">更多</string>
    <string name="persion_center">个人中心</string>
    <string name="main_page_title">XXX</string>
    <!--  -->
    <string name="my_collection">我的收藏</string>
    <string name="my_message">我的消息</string>
    <string name="not_login">您还没有登录哦</string>
    <!--  -->
    <string name="commit">提交</string>
    <string name="integral">积分</string>
    <string name="sign_in">签到</string>
    <string name="photograph">拍照</string>
    <string name="get_from_album">从相册中选取</string>
    <!--  -->
    <string name="login_user_null">用户名不能为空</string>
    <string name="login_pswd_null">密码不能为空</string>

</resources>