<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_gray"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/back_red" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/persion_center"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_unlogin_per_cen_Frag"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/not_login"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/login_per_cen_Frag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/background_radius_white"
                android:paddingBottom="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp"
                android:text="@string/login"
                android:textColor="@color/black" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_logined_per_cen_Frag"
        android:layout_width="match_parent"
        android:layout_height="100dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/head_iamge_cen_Frag"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/ic_launcher" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/sign_in_bnt_per_cen_Frag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_radius_white"
                    android:text="@string/sign_in"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/integral"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/integral_tex_per_cen_Frag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp" >

        <Button
            android:id="@+id/mymessage_bnt_percen_Frag"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background_halftopradius_red"
            android:text="@string/my_message"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/mycollection_bnt_percen_Frag"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background_halftopradius_white"
            android:text="@string/my_collection"
            android:textColor="@color/black" />
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </ListView>

</LinearLayout>