<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_gray"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/back_red" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/more"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="@color/gray"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/saveweb_rela_MoreFrag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/saveweb"
                android:textColor="@color/black" />

            <com.cookapp.cookapp.view.SlidButton
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" >
            </com.cookapp.cookapp.view.SlidButton>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/messageremind_rela_MoreFrag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:background="@color/white" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/messageremind"
                android:textColor="@color/black" />

            <com.cookapp.cookapp.view.SlidButton
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" >
            </com.cookapp.cookapp.view.SlidButton>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/sharesetting_rela_MoreFrag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:background="@color/white" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/sharesetting"
                android:textColor="@color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/invitefriends_rela_MoreFrag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:background="@color/white" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/invitefriends"
                android:textColor="@color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/clearsave_rela_MoreFrag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:background="@color/white" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/clearsave"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tex_cache_moreFrag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:textColor="@color/black" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="@color/gray"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/feedback_rela_MoreFrag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/feedback"
                android:textColor="@color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/diagnoseweb_rela_MoreFrag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:background="@color/white" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/diagnoseweb"
                android:textColor="@color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/about_rela_MoreFrag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:background="@color/white" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/about"
                android:textColor="@color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/competitiveproducts_rela_MoreFrag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:background="@color/white" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/competitiveproducts"
                android:textColor="@color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/update_rela_MoreFrag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:background="@color/white" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/update"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/update_tex_MoreFrag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/update_image_MoreFrag"
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>