<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background" >

    <RelativeLayout
        android:id="@+id/title_loginActi"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/back_red" >

        <ImageView
            android:id="@+id/image_back_loginActi"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:background="@drawable/arrowleft" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/findback_password_loginActi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/findbackpwsd"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title_loginActi"
        android:layout_marginBottom="50dp"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/feedback_list_feedActi"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/message_edit_feedActi"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4" />

        <Button
            android:id="@+id/commit_bnt_feedActi"
            android:text="@string/commit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

</RelativeLayout>