<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background" >

    <FrameLayout
        android:id="@+id/fragment_layout_homeActi"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="62dp" >
    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:background="@color/dark_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/relative_layout_main_homeActi"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/main_image_back_homeActi"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/ic_launcher" />

                <TextView
                    android:id="@+id/main_tex_back_homeActi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/main_page"
                    android:textColor="@color/dark_gray" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative_layout_radom_scan_homeActi"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/radsca_image_back_homeActi"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/ic_launcher" />

                <TextView
                    android:id="@+id/radsca_tex_back_homeActi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radom_scan"
                    android:textColor="@color/dark_gray" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative_layout_persion_cen_homeActi"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/perscen_image_back_homeActi"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/ic_launcher" />

                <TextView
                    android:id="@+id/perscen_tex_back_homeActi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/persion_center"
                    android:textColor="@color/dark_gray" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative_layout_more_homeActi"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/more_image_back_homeActi"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/ic_launcher" />

                <TextView
                    android:id="@+id/more_tex_back_homeActi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/more"
                    android:textColor="@color/dark_gray" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>